# kairo

./: CMakeLists.txt  README.md  build.yml  kairo_gui.cpp  kairo_gui.h  main.cpp
src/: main.cpp
